// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Process  nodes correctly correctly creates nodes from JSON which is an array of objects 1`] = `
Array [
  Array [
    Object {
      "blue": "true",
      "children": Array [],
      "funny": "yup",
      "id": "whatever [0] >>> CSV",
      "internal": Object {
        "contentDigest": "5005aee6b2557974cae0aabc712e125a",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "blue": "false",
      "children": Array [],
      "funny": "nope",
      "id": "whatever [1] >>> CSV",
      "internal": Object {
        "contentDigest": "0af87da7e572c2d6d8493bcd642c2c78",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process  nodes correctly correctly creates nodes from JSON which is an array of objects 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue": "true",
        "children": Array [],
        "funny": "yup",
        "id": "whatever [0] >>> CSV",
        "internal": Object {
          "contentDigest": "5005aee6b2557974cae0aabc712e125a",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "\\"blue\\",\\"funny\\"
true,\\"yup\\"
false,\\"nope\\"",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue": "false",
        "children": Array [],
        "funny": "nope",
        "id": "whatever [1] >>> CSV",
        "internal": Object {
          "contentDigest": "0af87da7e572c2d6d8493bcd642c2c78",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "\\"blue\\",\\"funny\\"
true,\\"yup\\"
false,\\"nope\\"",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
]
`;

exports[`Process  nodes correctly correctly handles the options object that is passed to it 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "field1": "blue",
      "field2": "funny",
      "id": "whatever [0] >>> CSV",
      "internal": Object {
        "contentDigest": "49605f5e32a2250d7ca740c5d2e79784",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "children": Array [],
      "field1": "true",
      "field2": "yup",
      "id": "whatever [1] >>> CSV",
      "internal": Object {
        "contentDigest": "2bf0bc0e8539ef5f6bbcf67c8b733233",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "children": Array [],
      "field1": "false",
      "field2": "nope",
      "id": "whatever [2] >>> CSV",
      "internal": Object {
        "contentDigest": "f5f617ce4243d639de924543dec5600e",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process  nodes correctly correctly handles the options object that is passed to it 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "field1": "blue",
        "field2": "funny",
        "id": "whatever [0] >>> CSV",
        "internal": Object {
          "contentDigest": "49605f5e32a2250d7ca740c5d2e79784",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "blue,funny
true,yup
false,nope",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "field1": "true",
        "field2": "yup",
        "id": "whatever [1] >>> CSV",
        "internal": Object {
          "contentDigest": "2bf0bc0e8539ef5f6bbcf67c8b733233",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "blue,funny
true,yup
false,nope",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "field1": "false",
        "field2": "nope",
        "id": "whatever [2] >>> CSV",
        "internal": Object {
          "contentDigest": "f5f617ce4243d639de924543dec5600e",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "blue,funny
true,yup
false,nope",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
]
`;

exports[`Process  nodes correctly correctly keeps GraphQL disallowed characters in field values when using {noheaders: true} 1`] = `
Array [
  Array [
    Object {
      "children": Array [],
      "field1": "blue dogs",
      "field2": "funny/cats",
      "field3": "who&is it?",
      "id": "whatever [0] >>> CSV",
      "internal": Object {
        "contentDigest": "1f6435fbab05bc6779122ea0484c2fc9",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "children": Array [],
      "field1": "true",
      "field2": "yup",
      "field3": "me",
      "id": "whatever [1] >>> CSV",
      "internal": Object {
        "contentDigest": "8362ed8fd481e89e2d866a95c11406b0",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
  Array [
    Object {
      "children": Array [],
      "field1": "false",
      "field2": "nope",
      "field3": "you",
      "id": "whatever [2] >>> CSV",
      "internal": Object {
        "contentDigest": "b142d00d714d1ffb37950ddda9b64f46",
        "type": "TestCsv",
      },
      "parent": "whatever",
    },
  ],
]
`;

exports[`Process  nodes correctly correctly keeps GraphQL disallowed characters in field values when using {noheaders: true} 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "field1": "blue dogs",
        "field2": "funny/cats",
        "field3": "who&is it?",
        "id": "whatever [0] >>> CSV",
        "internal": Object {
          "contentDigest": "1f6435fbab05bc6779122ea0484c2fc9",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "\\"blue dogs\\",\\"funny/cats\\",\\"who&is it?\\"
true,\\"yup\\",\\"me\\"
false,\\"nope\\",\\"you\\"",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "field1": "true",
        "field2": "yup",
        "field3": "me",
        "id": "whatever [1] >>> CSV",
        "internal": Object {
          "contentDigest": "8362ed8fd481e89e2d866a95c11406b0",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "\\"blue dogs\\",\\"funny/cats\\",\\"who&is it?\\"
true,\\"yup\\",\\"me\\"
false,\\"nope\\",\\"you\\"",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "children": Array [],
        "field1": "false",
        "field2": "nope",
        "field3": "you",
        "id": "whatever [2] >>> CSV",
        "internal": Object {
          "contentDigest": "b142d00d714d1ffb37950ddda9b64f46",
          "type": "TestCsv",
        },
        "parent": "whatever",
      },
      "parent": Object {
        "children": Array [],
        "content": "\\"blue dogs\\",\\"funny/cats\\",\\"who&is it?\\"
true,\\"yup\\",\\"me\\"
false,\\"nope\\",\\"you\\"",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
]
`;

exports[`Process  nodes correctly correctly replaces disallowed characters with _ in fieldnames to maintain compatibility with GraphQL syntax 1`] = `
Array [
  Array [
    Object {
      "blue_dogs": "true",
      "children": Array [],
      "funny_cats": "yup",
      "id": "whatever [0] >>> CSV",
      "internal": Object {
        "contentDigest": "52451d0eee2e719a9b6fd244e335ecf1",
        "type": "TestCsv",
      },
      "parent": "whatever",
      "who_is_it_": "me",
    },
  ],
  Array [
    Object {
      "blue_dogs": "false",
      "children": Array [],
      "funny_cats": "nope",
      "id": "whatever [1] >>> CSV",
      "internal": Object {
        "contentDigest": "21b6ba1089933f370b5b8cb905a7a7c7",
        "type": "TestCsv",
      },
      "parent": "whatever",
      "who_is_it_": "you",
    },
  ],
]
`;

exports[`Process  nodes correctly correctly replaces disallowed characters with _ in fieldnames to maintain compatibility with GraphQL syntax 2`] = `
Array [
  Array [
    Object {
      "child": Object {
        "blue_dogs": "true",
        "children": Array [],
        "funny_cats": "yup",
        "id": "whatever [0] >>> CSV",
        "internal": Object {
          "contentDigest": "52451d0eee2e719a9b6fd244e335ecf1",
          "type": "TestCsv",
        },
        "parent": "whatever",
        "who_is_it_": "me",
      },
      "parent": Object {
        "children": Array [],
        "content": "\\"blue dogs\\",\\"funny/cats\\",\\"who&is it?\\"
true,\\"yup\\",\\"me\\"
false,\\"nope\\",\\"you\\"",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
  Array [
    Object {
      "child": Object {
        "blue_dogs": "false",
        "children": Array [],
        "funny_cats": "nope",
        "id": "whatever [1] >>> CSV",
        "internal": Object {
          "contentDigest": "21b6ba1089933f370b5b8cb905a7a7c7",
          "type": "TestCsv",
        },
        "parent": "whatever",
        "who_is_it_": "you",
      },
      "parent": Object {
        "children": Array [],
        "content": "\\"blue dogs\\",\\"funny/cats\\",\\"who&is it?\\"
true,\\"yup\\",\\"me\\"
false,\\"nope\\",\\"you\\"",
        "extension": "csv",
        "id": "whatever",
        "internal": Object {
          "contentDigest": "whatever",
          "mediaType": "text/csv",
        },
        "name": "test",
        "parent": "SOURCE",
      },
    },
  ],
]
`;
